# ocaml-monocypher

./: .gitignore  monocypher.opam
src/: dune  jbuild  monocypher-ed25519.c  monocypher.h  monocypher.ml  monocypher.mli  monocypher_stubs.c  platform-specific.h
test/: dune  jbuild  test.ml
